classDiagram
    class Concept {
        +Guid Id
        +Guid KbId
        +string Name
        +List~Variable~ Variables
        +List~Constraint~ Constraints
        +List~ComputationRelation~ CompRels
        +List~string~ Aliases
        +List~string~ BaseObjects
        +List~SameVariable~ SameVariables
        +List~ConstructRelation~ ConstructRelations
        +List~Property~ Properties
        +List~ConceptRule~ ConceptRules
        +List~Equation~ Equations
    }
    class Variable {
        +string Name
        +string Type
        +int? Length
        +int? Scale
    }
    class ComputationRelation {
        +Guid Id
        +string ConceptName
        +int Flag
        +List~string~ InputVariables
        +int Rank
        +string? ResultVariable
        +string Expression
        +int Cost
    }
    class ConceptRule {
        +Guid Id
        +string Kind
        +List~Variable~ Variables
        +List~string~ Hypothesis
        +List~string~ Conclusion
    }
    Concept "1" *-- "many" Variable
    Concept "1" *-- "many" ComputationRelation
    Concept "1" *-- "many" ConceptRule
